multi-process nonparametric hmc

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,3 +1,4 @@
 {
-    "reportPrivateImportUsage": false
+    "reportPrivateImportUsage": false,
+    "ignore": ["evaluation_final/pedestrian/nonparametric-hmc"]
 }
