greedy elimination order

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ evaluation/pedestrian/nonparametric-hmc/lookahead_samples
 evaluation/pedestrian/nonparametric-hmc/samples_produced
 *.pdf
 *.bin
+tmp.txt
