fix subpackages + optional dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["dccxjax"]
+packages = ["dccxjax", "dccxjax.core", "dccxjax.distributions", "dccxjax.infer", "dccxjax.viz"]
 
 [project]
 name = "dccxjax"
@@ -16,3 +16,7 @@ dependencies = [
     "numpyro>=0.18.0",
     "jax==0.6.2"
 ]
+
+[project.optional-dependencies]
+cuda = ["jax[cuda]==0.6.2"]
+tpu = ["jax[tpu]==0.6.2"]
