--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,4 @@
 {
     "reportPrivateImportUsage": false,
-    "ignore": ["evaluation/pedestrian/nonparametric-hmc"]
+    "ignore": ["evaluation/pedestrian/nonparametric-hmc", "evaluation/gp/sdvi"]
 }
