--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "tqdm>=4.67.1",
     "matplotlib>=3.10.3",
     "flatbuffers>=25.2.10",
-    "numpyro>=0.19.0",
+    "numpyro>=0.19.0,<0.20",
     "jax==0.7.1"
 ]
 
