--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "matplotlib>=3.10.3",
     "flatbuffers>=25.2.10",
     "numpyro>=0.19.0,<0.20",
-    "jax==0.7.1"
+    "jax==0.7.1",
+    "psutil>=7.0.0",
 ]
 
 [project.optional-dependencies]
