cpu brand name + count wrt to affinity

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "numpyro>=0.19.0,<0.20",
     "jax==0.7.1",
     "psutil>=7.0.0",
+    "py-cpuinfo>=9.0.0",
 ]
 
 [project.optional-dependencies]
