--- a/evaluation/gp/autogp/Project.toml
+++ b/evaluation/gp/autogp/Project.toml
@@ -2,4 +2,5 @@
 AutoGP = "6eb593e7-dfb4-4e48-b98e-d7222cdf0053"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Hwloc = "0e44f5e4-bd66-52a0-8798-143a42290a1d"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
