--- a/evaluation/gmm/gen/Project.toml
+++ b/evaluation/gmm/gen/Project.toml
@@ -4,7 +4,8 @@ Gen = "ea4f424c-a589-11e8-07c0-fd5c91b9da4a"
 Hwloc = "0e44f5e4-bd66-52a0-8798-143a42290a1d"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
+Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 
 [compat]
-Gen = "=v0.4.8"
 Distributions = "=0.25.118"
+Gen = "=v0.4.8"
